добавил модель, работает

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@react-three/drei": "^10.1.2",
+    "@react-three/fiber": "^9.1.2",
     "@types/node": "^22.15.29",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
